--- a/Header-with-simple-menu/homepage.html
+++ b/Header-with-simple-menu/homepage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home page</title>
-    <link href="/Menu/homepage.css" rel="stylesheet" />
+    <link href="/Header-with-simple-menu/homepage.css" rel="stylesheet" />
     <link href="/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
