--- a/Complete-header-with-layout/homepage.html
+++ b/Complete-header-with-layout/homepage.html
@@ -75,17 +75,27 @@
       <div><i class="fa-solid fa-heart"></i></div>
       <div><i class="fa-solid fa-cart-shopping"></i></div>
     </div>
-    <div class="gridLook">
+    <div class="bannerImg">
       <div id="img1">
-        <img src="/img/carousel-1.jpg" width="550" height="300">
+        <img src="/img/carousel-1.jpg" width="550" height="300" />
+        <div class="bannerTxt">
+          <p class="txt1">Men Fashion</p>
+        </div>
       </div>
       <div id="img2">
-        <img src="/img/carousel-2.jpg" width="250" height="142">
+        <img src="/img/carousel-2.jpg" width="250" height="142" />
+        <div class="bannerTxt">
+          <p class="txt2">Special offers <br> Save 20%</p></p>
+        </div>
       </div>
       <div id="img3">
-        <img src="/img/carousel-3.jpg" width="250" height="142">
+        <img src="/img/carousel-3.jpg" width="250" height="142" />
+        <div class="bannerTxt">
+          <p class="txt3">Special offers</p>
+        </div>
       </div>
     </div>
+
     <div class="features">
       <div class="feature">
         <div>
