--- a/JS-add product component/shop.html
+++ b/JS-add product component/shop.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-    <link href="/add product/homepage.css" rel="stylesheet" />
+    <link href="/JS-add product component/homepage.css" rel="stylesheet" />
     <link href="/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
@@ -108,6 +108,6 @@
               <tbody class="align-middle" id="products">
               </tbody>
             </table>
-            <script src="/add product/script.js"></script>
+            <script src="/JS-add product component/script.js"></script>
 </body>
 </html>
