--- a/JS-add product component/shop.html
+++ b/JS-add product component/shop.html
@@ -65,8 +65,8 @@
         </div>
       </div>
       <ul class="main-menu">
-        <li><a href="/add product/homepage.html">Home</a></li>
-        <li><a href="/add product/shop.html" class="nav-item nav-link">Shop</a></li>
+        <li><a href="/JS-add product component/homepage.html">Home</a></li>
+        <li><a href="/JS-add product component/shop.html" class="nav-item nav-link">Shop</a></li>
         <li><a href="#">Shop Details</a></li>
         <li><a href="#">Pages</a></li>
         <li><a href="#">Contact</a></li>
