--- a/JS-add product component/shop.html
+++ b/JS-add product component/shop.html
@@ -76,7 +76,7 @@
         <div class="row px-xl-5">
           <div class="col-lg-8 table-responsive mb-5">
             <table
-              class="table table-light table-borderless table-hover text-center mb-0"
+              class="table table-light table-borderless table-hover text-center mb-0" id="table"
             >
               <thead class="thead-dark">
                 <tr>
@@ -100,7 +100,7 @@
                   <th>Products</th>
                   <th>Price</th>
                   <th>Quantity</th>
-                  <th>Total</th>
+                  <span id = "val"><th>Total</th></span>
                   <th>Remove</th>
     
                 </tr>
