--- a/JavaScript-3/index.html
+++ b/JavaScript-3/index.html
@@ -13,7 +13,9 @@
     <script>
       setTimeout(() => {
         console.log("Test");
+        //start after 0 mil seconds
       }, 0);
+      //this will start first so it will start slowly because of 800000
       let t = 0;
       for (let i = 0; i < 8000000000; i++) {
         t++;
