--- a/JS-add product component/homepage.html
+++ b/JS-add product component/homepage.html
@@ -1042,7 +1042,7 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="/JS-add product component/main.js"></script>
     <script src="/JS-add product component/home.js"></script>
 </body>
 </html>
