--- a/JS-add product component/shop.html
+++ b/JS-add product component/shop.html
@@ -651,7 +651,7 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
-    <script src="/JS-add product component/script.js"></script>
+    <script src="/JS-add product component/task.js"></script>
     <!-- <script src="js/cart.js"></script> -->
   </body>
 </html>
